Fix links, or not

--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
             </svg>
           </button>
           <nav>
+            <!-- You'll have to change this for subpages but it has to be 
+             like this for local testing lol because apache2 is pain -->
             <a href="index.html" class="active">Home</a>
-            <a href="/download.html">Downloads</a>
-            <a href="/changelog.html">Changelog</a>
-            <a href="/contribute.html">Contribute!</a>
-            <a href="/about.html">About</a>
+            <a href="download.html">Downloads</a>
+            <a href="changelog.html">Changelog</a>
+            <a href="contribute.html">Contribute!</a>
+            <a href="about.html">About</a>
           </nav>
         </div>
         <button class="hamburger" aria-label="Toggle menu">
